충돌파일 수정

--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
-  <link rel="stylesheet" href="/css/auth.css">
+  <link rel="stylesheet" href="/css/pages/auth.css">
 </head>
 <body>
   <main>
@@ -26,7 +26,7 @@
               <div class="auth-form__password-input">
                 <input id="password" name="password" type="password">
                 <button class="auth-form__password-toggle-btn">
-                  <img src="../icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기">
+                  <img src="/icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기">
                 </button>
               </div>
             </div>
@@ -35,7 +35,7 @@
               <div class="auth-form__password-input">
                 <input id="confirm_password" name="confirm_password" type="password">
                 <button class="auth-form__password-toggle-btn">
-                  <img src="../icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기">
+                  <img src="/icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기">
                 </button>
               </div>
             </div>
