--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/landing-style.css">
+  <link rel="stylesheet" href="/css/pages/main.css">
 </head>
 <body>
   <header>
     <nav class="linkbrary-nav">
       <ul>
         <li><a href="/"><img src="/icons/logo.svg" class="linkbrary-nav__logo" alt="링크브러리 로고"></a></li>
-        <li><a href="/signin.html" class="main-header__signin-btn">로그인</a></li>
+        <li><a href="/signin.html" class="linkbrary-nav__signin-btn">로그인</a></li>
       </ul>
     </nav>
   </header>
