feat: 로그인 enter event 추가

--- a/folder.html
+++ b/folder.html
@@ -6,7 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  
-  <script src="signin.js"></script>  
+  <header>
+    <a href="index.html"><img class="logo" src="img-landing/logo.svg"></a>
+    <a href="signin.html"><button class="btn-large">로그인</button></a>
+  </header>
 </body>
 </html>
