--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           <a href="/faq">FAQ</a>
         </div>
         <div class="footer__sns-link">
-          <a href="https://www.facebook.com/" target="__blank"><img src="./icons/akar-icons_facebook-fill.svg"alt="페이스북 바로가기"></a>
-          <a href="https://twitter.com/?lang=ko"target="__blank"><img src="./icons/akar-icons_twitter-fill.svg" alt="트위터 바로가기"></a>
-          <a href="https://www.youtube.com/"target="__blank" ><img src="./icons/akar-icons_youtube-fill.svg" alt="유튜브 바로가기"></a>
-          <a href="https://www.instagram.com/"target="__blank" ><img src="./icons/ant-design_instagram-filled.svg" alt="인스타그램 바로가기"></a>
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="./icons/akar-icons_facebook-fill.svg"alt="페이스북 바로가기"></a>
+          <a href="https://twitter.com/?lang=ko"target="_blank" rel="noopener noreferrer"><img src="./icons/akar-icons_twitter-fill.svg" alt="트위터 바로가기"></a>
+          <a href="https://www.youtube.com/"target="_blank" rel="noopener noreferrer"><img src="./icons/akar-icons_youtube-fill.svg" alt="유튜브 바로가기"></a>
+          <a href="https://www.instagram.com/"target="_blank" rel="noopener noreferrer"><img src="./icons/ant-design_instagram-filled.svg" alt="인스타그램 바로가기"></a>
         </div>
       </div>
     </div>
