--- a/signin.html
+++ b/signin.html
@@ -20,18 +20,20 @@
             <div class="auth-form__input-group">
               <label for="email">이메일</label>
               <input id="email" name="email" type="email">
+              <div class="auth-form__wrong-email"></div>
             </div>
             <div class="auth-form__input-group">
               <label for="password">비밀번호</label>  
               <div class="auth-form__password-input">
                 <input id="password" name="password" type="password">
                 <button class="auth-form__password-toggle-btn">
-                  <img src="/icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기"></i>
+                  <img src="/icons/eye-off.svg" class="auth-form__password-icon" alt="비밀번호 보기">
                 </button>
+              <div class="auth-form__wrong-password"></div>
               </div>
             </div>
           </div>
-          <button class="auth-btn" type="submit">로그인</button>
+          <button class="auth-form__auth-btn" type="submit">로그인</button>
         </form>
       </div>
       <div class="social-auth">
@@ -52,6 +54,7 @@
         </div>
       </div>
     </div>
+    <script src="/js/auth.js"></script>
   </main>
 </body>
 </html>
