--- a/signup.html
+++ b/signup.html
@@ -20,27 +20,30 @@
             <div class="auth-form__input-group">
               <label for="email">이메일</label>
               <input id="email" name="email" type="email">
+              <div class="auth-form__wrong-email"></div>
             </div>
             <div class="auth-form__input-group">
               <label for="password">비밀번호</label>
               <div class="auth-form__password-input">
                 <input id="password" name="password" type="password">
                 <button class="auth-form__password-toggle-btn">
-                  <img src="/icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기">
+                  <img src="/icons/eye-off.svg" class="auth-form__password-icon" alt="비밀번호 보기">
                 </button>
+                <div class="auth-form__wrong-password"></div>
               </div>
             </div>
             <div class="auth-form__input-group">
-              <label for="confirm_password">비밀번호 확인</label>
+              <label for="confirm-password">비밀번호 확인</label>
               <div class="auth-form__password-input">
-                <input id="confirm_password" name="confirm_password" type="password">
-                <button class="auth-form__password-toggle-btn">
-                  <img src="/icons/eye-on.svg" class="auth-form__password-icon" alt="비밀번호 보기">
+                <input id="confirm-password" name="confirm_password" type="password">
+                <button class="auth-form__password-toggle-btn confirm">
+                  <img src="/icons/eye-off.svg" class="auth-form__password-icon confirm" alt="비밀번호 보기">
                 </button>
+                <div class="auth-form__wrong-password confirm"></div>
               </div>
             </div>
           </div>
-          <button class="auth-btn" type="submit">회원가입</button>
+          <button class="auth-form__auth-btn" type="submit">회원가입</button>
         </form>
       </div>
       <div class="social-auth">
@@ -62,6 +65,5 @@
       </div>
     </div>
   </main>
-  
 </body>
 </html>
