--- a/signin.html
+++ b/signin.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abel&family=Acme&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/CSS/sign.css">
-  <link rel="stylesheet" href="/assets/CSS/mobile.css">
+  <link rel="stylesheet" href="/assets/css/mobile.css">
   <title>signin</title>
 </head>
 <body class="sign-header-wrap">
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <form>
+    <form><!-- 종결 하기 <img /> -->
       <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
