--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <form>
+    <form><!-- 종결 하기 <img /> -->
       <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
