refactor: Change blackjack.js script type

--- a/Linkbrary/src/folder.html
+++ b/Linkbrary/src/folder.html
@@ -82,7 +82,7 @@
         </div>
 
     </main>
-    <script type="module" src="js/justForFun/blackJack.js">
+    <script src="js/justForFun/blackJack.js">
     </script>
 </body>
 
