--- a/signup.html
+++ b/signup.html
@@ -25,23 +25,23 @@
       <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
-          <input type="email" class="sign-input" name="email"> 
+          <input type="email" class="sign-input" name="email" /> 
         </div>
         <div class="sign-inner">
           <label for="password" class="sign-label">비밀번호</label>
           <div class="sign__pw-eye">
-            <input type="password" class="sign-input" name="pw">
-            <button class="sign__pw-eye-off">  
-              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기">
+            <input type="password" class="sign-input" name="pw" />
+            <button class="sign__pw-eye-off"> 
+              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
         </div>
         <div class="sign-inner">
           <label for="password" class="sign-label">비밀번호 확인</label>
           <div class="sign__pw-eye">
-            <input type="password" class="sign-input" name="pw">
+            <input type="password" class="sign-input" name="pw" />
             <button class="sign__pw-eye-off">  
-              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기">
+              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
         </div>
