--- a/weeklyMission1/signup.html
+++ b/weeklyMission1/signup.html
@@ -22,11 +22,13 @@
         <div class="signin-email">
             <p>이메일</p>
             <input type="email" placeholder="codeit@codeit.com">
+            <div class="error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호</p>
             <input id="signInPw" type="password" placeholder="password">
             <img src="./img/unhidden.svg" alt="opened eye">
+            <div class="error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호확인</p>
