--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
   <title>Linkbrary</title>
-  <link rel="stylesheet" href="./css/mainstyle.css">
+  <link rel="stylesheet" href="index.css">
   <script src="https://kit.fontawesome.com/9d188ee567.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -29,21 +29,21 @@
       <a href="index.html">
         <img class="gnb-logo" src="./image/Linkbrary.png">
       </a>
-      <a href="signin.html">
+      <a href="./signin/signin.html">
         <button class="gnb-button">로그인</button>
       </a>
     </div>
   </nav>
   <header>
-    <div class="maincontents-heading">
-      <h2 class="slogan">
+    <div class="maincontents">
+      <h2 class="maincontents_slogan">
         <span id="maincontents-text-purple-to-pink">세상의 모든 정보</span>를<br>
         쉽게 저장하고 관리해보세요
       </h2>
     </div>
-    <div class="maincontents-goto-signup">
-      <a href="signup.html">
-        <button class="goto-signup-link">링크 추가하기</button>
+    <div class="maincontents_button-group">
+      <a href="./signup/signup.html">
+        <button class="maincontents_button-group_button">링크 추가하기</button>
       </a>
     </div>
     <div class="dim">
@@ -52,47 +52,47 @@
   </header>
   <article>
     <section>
-      <h3 class="title">
-        <span id="textcolor-pink-to-blue">원하는 링크를</span>
+      <h3 class="section_title">
+        <span id="section_text-color-pink-to-blue">원하는 링크를</span>
         저장하세요
       </h3>
       <img src="./image/card.jpg" class="section_img-box-image">
-      <p class="section_text_discription">
+      <p class="section_text_description">
          나중에 읽고 싶은 글, 다시 보고 싶은 영상,
         사고싶은 옷, 기억하고 싶은 모든 것을
         한 공간에 저장하세요 
       </p>
     </section>
     <section>
-      <h3 class="title">
+      <h3 class="section_title">
         링크를 폴더로
-        <span id="textcolor-yellow-to-blue">관리</span>하세요
+        <span id="section_text-color-yellow-to-blue">관리</span>하세요
       </h3>
       <img class="section_img-box-image" src="./image/디스크립션 없는 팝업.jpg">
-      <p class="section_text_discription">
+      <p class="section_text_description">
         나만의 폴더를 무제한으로 만들고
         다양하게 활용할 수 있습니다.
       </p>
     </section>
     <section>
-      <h3 class="title">
+      <h3 class="section_title">
         저장한 링크를
-        <span id="textcolor-purple-to-blue">공유</span>해 보세요
+        <span id="section_text-color-purple-to-blue">공유</span>해 보세요
       </h3>
       <img class="section_img-box-image" src="./image/img3.png">
-      <p class="section_text_discription">
+      <p class="section_text_description">
           여러 링크를 폴더에 담고 공유할 수 있습니다.
           가족, 친구, 동료들에게 쉽고 빠르게 링크를
           공유해 보세요.
       </p>
     </section>
     <section>
-      <h3 class="title">
+      <h3 class="section_title">
         저장한 링크를
-        <span id="textcolor-blue-to-purple">검색</span>해 보세요
+        <span id="section_text-color-blue-to-purple">검색</span>해 보세요
       </h3>
       <img class="section_img-box-image" src="./image/스크린샷.jpg">
-      <p class="section_text_discription">
+      <p class="section_text_description">
         중요한 정보들을 검색으로 쉽게 찾아보세요.
       </p>
     </section>
