로그인 버튼 클릭시의 함수 생성

--- a/signin.html
+++ b/signin.html
@@ -33,9 +33,7 @@
               type="password"
               name="password"
             />
-            <div id="password-errorText" class="text error">
-              비밀번호를 확인해 주세요.
-            </div>
+            <div id="password-errorText" class="text error"></div>
           </div>
         </section>
         <button class="signin">로그인</button>
