--- a/signup/signup.html
+++ b/signup/signup.html
@@ -19,47 +19,48 @@
 </head>
 
 <body>
-  <section>
-    <a href="../landing.html" target="_blank">
-      <img class="logo" alt="logo" src="../images/logo.svg" width=240>
-    </a>
-    <h1 class="text">
-      이미 회원이신가요?
-      <a class="text signup" href="../signin/signin.html">로그인하기</a>
-    </h1>
-    <form class="form">
-      <label for="username">
-        이메일
-      </label>
-      <input id="username" name="username">
-      <label for="password">
-        비밀번호
-      </label>
-      <div class="password-container">
-        <input name="password" type="password">
-        <img class="eye" alt="show_password" src="../images/eye-on.svg">
-      </div>
-      <label for="password_repeat">
-        비밀번호 확인
-      </label>
-      <div class="repeat-container">
-        <input name="password_repeat" type="password">
-        <img class="eye" alt="show_password" src="../images/eye-on.svg">
-      </div>
-  
-      <button class="signup_button">
-        회원가입
-      </button>
-    </form>  
+  <div class="wrapper">
+    <div class="content">
+      <a href="../landing.html" target="_blank">
+        <img class="logo" alt="logo" src="../images/logo.svg" width=240>
+      </a>
+      <h1 class="text">
+        이미 회원이신가요?
+        <a class="text signup" href="../signin/signin.html">로그인하기</a>
+      </h1>
+      <form class="form">
+        <label for="username">
+          이메일
+        </label>
+        <input id="username" name="username">
+        <label for="password">
+          비밀번호
+        </label>
+        <div class="password-container">
+          <input name="password" type="password">
+          <img class="eye" alt="show_password" src="../images/eye-on.svg">
+        </div>
+        <label for="password_repeat">
+          비밀번호 확인
+        </label>
+        <div class="repeat-container">
+          <input name="password_repeat" type="password">
+          <img class="eye" alt="show_password" src="../images/eye-on.svg">
+        </div>
+    
+        <button class="signup_button">
+          회원가입
+        </button>
+      </form>  
 
-    <div class="social">
-      <p>다른 방식으로 가입하기</p>
-      <div class="social-container">
-        <a href="https://www.google.com/" target="social"><img alt="google_account" src="../images/icon_google.svg" width 42></a>
-        <a href="https://www.kakaocorp.com/" target="social"><img alt="kakao_account" src="../images/icon_kakao.svg" width 42></a>
+      <div class="social">
+        <p>다른 방식으로 가입하기</p>
+        <div class="social-container">
+          <a href="https://www.google.com/" target="social"><img alt="google_account" src="../images/icon_google.svg" width 42></a>
+          <a href="https://www.kakaocorp.com/" target="social"><img alt="kakao_account" src="../images/icon_kakao.svg" width 42></a>
+        </div>
       </div>
     </div>
-
-  </section>
+  </div>
 </body>
 </html>
