--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       key="image"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@linkbrary" />
+    <meta name="twitter:site" content="@Linkbrary" />
     <meta name="twitter:title" content="Linkbrary" />
     <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
     <meta
@@ -34,7 +34,7 @@
   <header>
     <h1>
       <a href="/">
-        <img src="images/logo.svg">
+        <img src="images/logo.svg" alt="linklabrary로고">
       </a>
     </h1>
     <a class="onclick-signin button-style" href='./signin.html'>
