refactor(mentor): h2구조 통일

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   </header>
   <main>
     <section class="main">
-      <div class="main-title">
+      <h2 class="main-title">
         <span>세상에 모든 정보</span>를 <br>
         쉽게 저장하고 관리해 보세요
-      </div>
+      </h2>
       <a class="onclick-signup button-style">링크 추가하기</a>
       <img src="images/image25.png" alt="서비스 썸네일">
     </section>
