refactor(mentor): class이름 기능에 맞춰 수정

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <a href="/privacy">Privacy Policy</a>
         <a href="/faq">FAQ</a>
       </div>
-      <div class="left">
+      <div class="social-wrapper">
         <a href="https://www.facebook.com" target="_blank"><img src="images/akar-icons_facebook-fill.svg"> </a>
         <a href="https://www.twitter.com" target="_blank"><img src="images/akar-icons_twitter-fill.svg"></a>
         <a href="https://www.youtube.com" target="_blank"><img src="images/akar-icons_youtube-fill.svg"></a>
