Changed landing page
1.in 'head-image' class tag, replaced 'padding-top' with 'aspect-ratio' to make
  code right.

2.in 'contents' class tag, changed order of elements with 'order'
  property.

3.fixed height issue of the 'info' class tag in the 'footer'tag.

--- a/landing.html
+++ b/landing.html
@@ -59,7 +59,7 @@
   </header>
   <main>
     <section class="contents">
-      <div>
+      <div class="contents-textbox">
         <h2 class="contents-text-title">
           <span class="contents-text-gradient first">원하는 링크</span>를<br class="break-not-mobile">
           저장하세요
@@ -74,10 +74,10 @@
       </div>
     </section>
 
-    <section class="contents reverse">
+    <section class="contents">
       <div class="contents-image" alt="이미지-관리" style="background-image: url('./images/img2.svg');">
       </div>
-      <div>
+      <div class="contents-textbox">
         <h2 class="contents-text-title">
           링크를 폴더로<br class="break-not-mobile">
           <span class="contents-text-gradient second">관리</span>하세요
@@ -90,7 +90,7 @@
     </section>
 
     <section class="contents">
-      <div>
+      <div class="contents-textbox">
         <h2 class="contents-text-title">
           저장한 링크를<br class="break-not-mobile">
           <span class="contents-text-gradient third">공유</span>해보세요
@@ -105,10 +105,10 @@
       </div>
     </section>
 
-    <section class="contents reverse">
+    <section class="contents">
       <div class="contents-image" alt="이미지-검색" style="background-image: url(./images/img4.svg);">
       </div>
-      <div>
+      <div class="contents-textbox">
         <h2 class="contents-text-title">
           저장한 링크를<br class="break-not-mobile">
           <span class="contents-text-gradient fourth">검색</span>해보세요
