feat: 코드리뷰용 JS파일 추가

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
 <head>
 	<title>Linkbrary</title>
 	<link href="css/reset.css" rel="stylesheet">
+
 	<link rel="stylesheet" as="style" crossorigin
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+
 	<link href="css/nav.css" rel="stylesheet">
 	<link href="css/global.css" rel="stylesheet">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
 	<meta name="keywords" content="도서관, 책, 정보, 데이터베이스">
 	<meta name="author" content="SeungRyeolBaek">
@@ -48,7 +52,7 @@
 			<p class="first-line"><span class="colored-text-1">세상의 모든 정보</span>를</p>
 			<p class="second-line">쉽게 저장하고 관리해 보세요</p>
 		</div>
-		<a class="landing-section__button--main" onclick="location.href = 'signup.html'">
+		<a class="landing-section__button--main" href = 'signup.html'>
 			<p>링크 추가하기</p>
 		</a>
 		<div class="landing-section__image--main">
@@ -130,8 +134,10 @@
 		</div>
 	</section>
 
+
 	<link href="css/footer.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Acme' rel='stylesheet'>
+
 	<footer class="footer">
 		<div class="footer__frame">
 			<div class="footer__contents">
