로그인 기능 구현

--- a/signin.html
+++ b/signin.html
@@ -29,20 +29,8 @@
           <input id="EMAIL" class="sign-input" type="email" name="email" />
 
           <!--테스트중-->
-          <div class="errortestNOemail" style="display:none">
-            <div class="error_message">
-              이메일을 입력해 주세요.
-            </div>
-          </div>
-          <div class="errortestemail" style="display:none">
-            <div class="error_message">
-              올바른 이메일 주소가 아닙니다.
-            </div>
-          </div>
-
-
+          <div class="errortestNOemail"></div>
         </div>
-        
 
         <div class="sign-inner">
           <label class="sign-label" for="pw">비밀번호</label>
@@ -51,15 +39,12 @@
             <button class="sign__pw-eye-off">
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
+
           </div>
           <!--테스트중-->
-          <div class="errortestNOemail" style="display:none">
-            <div class="error_message">
-              비밀번호를 입력해 주세요.
-            </div>
-          </div>
+          <div class="errortestNOPW"></div>
         </div>
-      </div>
+      </div> <!--버튼 마진 수정-->
       <button class="sign-btn btn-color" type="submit">로그인</button>
     <!-- </form> -->
   </div>
