이메일: test@codeit.com, 비밀번호: codeit101 으로 로그인 시도할 경우, “/folder” 페이지로 이동

--- a/signin.html
+++ b/signin.html
@@ -19,7 +19,7 @@
         <p class="auth__text">회원이 아니신가요?</p>
         <a class="auth__link" href="/signup.html">회원 가입하기</a>
       </div>
-      <form class="auth-form">
+      <form id="signinForm" class="auth-form">
         <div class="auth-form__input-wp">
           <label for="email" class="auth-form__label">이메일</label>
           <input id="email"  class="auth-form__input" type="email" />
