비밀번호 input에서 focus out 할 때, 값이 없을 경우 아래에 “비밀번호를 입력해 주세요.” 에러 메세지를 보임

--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,9 @@
       <form id="signinForm" class="auth-form">
         <div class="auth-form__input-wp">
           <label for="email" class="auth-form__label">이메일</label>
-          <input id="email"  class="auth-form__input" type="email" />
+          <div>
+            <input id="email" class="auth-form__input" type="email" />
+          </div>
         </div>
         <div class="auth-form__input-wp">
           <label for="password" class="auth-form__label">비밀번호</label>
@@ -30,7 +32,7 @@
             <input id="password" class="auth-form__input" type="password" />
             <img class="auth-form__eye" src="/assets/img/eye_off.png" alt="eye off" />
           </div>
-          </div>
+        </div>
         <button type="submit" class="btn auth-form__btn">로그인</button>
       </form>
       <div class="auth-sns">
