--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,9 @@
       <form class="auth-form">
         <div class="auth-form__input-wp">
           <label for="email" class="auth-form__label">이메일</label>
-          <input id="email" class="auth-form__input" type="email" />
+          <div>
+            <input id="email" class="auth-form__input" type="email" />
+          </div>
         </div>
         <div class="auth-form__input-wp">
           <label for="password" class="auth-form__label">비밀번호</label>
