코드 리뷰 반영

--- a/signup.html
+++ b/signup.html
@@ -33,12 +33,12 @@
             <input id="password" name="password" type="password" />
             <i class="fa-solid fa-eye fa-2x togglePassword"></i>
           </div>
-          <label for="password">비밀번호 확인</label>
+          <label for="password-check">비밀번호 확인</label>
           <div class="password">
-            <input id="password" name="password" type="password" />
+            <input id="password-check" name="password-check" type="password" />
             <i class="fa-solid fa-eye fa-2x togglePassword"></i>
           </div>
-          <button class="signin-but white">회원가입</button>
+          <button class="signin-but white" type="submit">회원가입</button>
         </form>
         <div class="social-login gray-4">
           <span>다른 방식으로 가입하기</span>
