--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/sign.css" />
   </head>
   <body>
+
     <header>
       <a class="logo-link" href="index.html">
         <img class="header-logo" src="./image/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
@@ -19,30 +20,38 @@
         이미 회원이신가요?<a class="header-link" href="signin.html">로그인 하기</a>
       </p>
     </header>
+
     <div class="sign-box">
+
       <form class="sign-form">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input class="sign-input input-border-default" type="email"/>
+            <div class="error-message" id="emailError"></div>
           </div>
+
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input input-border-default" type="password"/>
             <button class="eye-button" type="button">
               <img src="./image/eye-off.svg" />
             </button>
+            <div class="password-message" id="passwordError"></div>
           </div>
+
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input input-border-default" type="password"/>
             <button class="eye-button" type="button">
               <img src="./image/eye-off.svg" />
             </button>
+            <div class="password-message" id="passwordError"></div>
           </div>
         </div>
         <button class="cta" type="submit">회원가입</button>
       </form>
+
       <div class="sns-box">
         <span class="sns-text">다른 방식으로 가입하기</span>
         <div class="sns-links">
@@ -54,6 +63,7 @@
           </a>
         </div>
       </div>
+
     </div>
   </body>
 </html>
