비밀번호 eye on, off 추가

--- a/signin.html
+++ b/signin.html
@@ -37,7 +37,7 @@
           <div class="sign__pw-eye">
             <input id="PW" class="sign-input" type="password" name="pw" />
             <button class="sign__pw-eye-off">
-              <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
+              <img class="eye-offtest" src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
 
           </div>
@@ -65,6 +65,7 @@
     </div>
   </div>
 
-  <script src="/assets/js/login.js"></script>
+  <script type="module" src="/assets/js/login.js"></script>
+  <script type="module" src="/assets/js/eye.js"></script>
 </body>
 </html>
