--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
   <link rel="stylesheet" href="/assets/css/mobile.css">
   <title>Linkbrary</title>
 </head>
-
-<!-- 종결 하기 <img /> -->
-<!--a 태그를 사용해서 외부 링크로 이동하는 경우 rel 속성-->
 <body>
   <nav class="nav-wrap">
     <div class="nav-inner">
       <a href="/">
-        <img src="/assets/img/svg/main-logo.svg" alt="홈으로 연결된 사이트 로고 Linkbrary">
+        <img src="/assets/img/svg/main-logo.svg" alt="홈으로 연결된 사이트 로고 Linkbrary" />
       </a>
       <a class="nav-link btn-color" href="/signin.html">
         로그인
@@ -32,13 +29,13 @@
       <h1 class="header-title">
         <span class="header-title__text">세상의 모든 정보</span>를
         <br />
-        쉽게 저장하고<br class="tablet-br"/> 관리해 보세요
+        쉽게 저장하고<br class="tablet-br" /> 관리해 보세요
       </h1>
       <a class="header-link btn-color" href="/signup.html">
         링크 추가하기
       </a>
-      <div class="headerimgtest"> <!---->
-        <img src="/assets/img/png/mainbg.png" class="header-image" alt="링크 검색 이미지">
+      <div class="header-wrap__img">
+        <img src="/assets/img/png/mainbg.png" class="header-image" alt="링크 검색 이미지" />
       </div>
     </div>
   </header> 
@@ -50,7 +47,7 @@
         <h2 class="card-item__title">
           <span class="title-1-gradient background-clip-text">
             원하는 링크</span>를
-            <br class="pc-br"/>
+            <br class="pc-br" />
             저장하세요
         </h2>
         <p class="card-item__text">
@@ -61,8 +58,8 @@
           한 공간에 저장하세요.
         </p>
       </div>
-      <div class="contentimgtest"> <!---->
-        <img src="/assets/img/png/card1.png" class="card-item__img" alt="링크 저장 이미지">
+      <div class="card-wrap__img"> 
+        <img src="/assets/img/png/card1.png" class="card-item__img" alt="링크 저장 이미지" />
       </div>
     </section>
 
@@ -71,7 +68,7 @@
       <div class="card-inner">
         <h2 class="card-item__title">
           링크를 폴더로
-          <br class="pc-br"/>
+          <br class="pc-br" />
           <span class="title-2-gradient background-clip-text">관리</span>하세요
         </h2>
         <p class="card-item__text">
@@ -80,8 +77,8 @@
           다양하게 활용할 수 있습니다.
         </p>
       </div>
-      <div class="contentimgtest"> <!---->
-        <img src="/assets/img/png/card2.png" class="card-item__img" alt="폴더 관리 팝업창 이미지">
+      <div class="card-wrap__img"> 
+        <img src="/assets/img/png/card2.png" class="card-item__img" alt="폴더 관리 팝업창 이미지" />
       </div>
     </section>
 
@@ -90,7 +87,7 @@
       <div class="card-inner">
         <h2 class="card-item__title">
           저장된 링크로
-          <br class="pc-br"/>
+          <br class="pc-br" />
           <span class="title-3-gradient background-clip-text">공유</span>해 보세요
         </h2>
         <p class="card-item__text">
@@ -101,8 +98,8 @@
           공유해 보세요.
         </p>
       </div>
-      <div class="contentimgtest"> <!---->
-        <img src="/assets/img/png/card3.png" class="card-item__img" alt="폴더 공유 팝업창 이미지">
+      <div class="card-wrap__img"> 
+        <img src="/assets/img/png/card3.png" class="card-item__img" alt="폴더 공유 팝업창 이미지" />
       </div>
     </section>
 
@@ -118,8 +115,8 @@
           중요한 정보들을 검색으로 쉽게 찾아보세요.
         </p>
       </div>
-      <div class="contentimgtest"> <!---->
-        <img src="/assets/img/png/card4.png" class="card-item__img" alt="검색 이미지">
+      <div class="card-wrap__img"> 
+        <img src="/assets/img/png/card4.png" class="card-item__img" alt="검색 이미지" />
       </div>
     </section>
   </article>
@@ -139,16 +136,16 @@
       </div>
       <div class="footer-item__icon">
         <a href="https://www.facebook.com/?locale=ko_KR" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-facebook.svg" alt="facebook">
+          <img src="/assets/img/svg/icon-facebook.svg" alt="facebook" />
         </a>
         <a href="https://twitter.com/?lang=ko" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-twitter.svg" alt="twitter">
+          <img src="/assets/img/svg/icon-twitter.svg" alt="twitter" />
         </a>
         <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-youtube.svg" alt="youtube">
+          <img src="/assets/img/svg/icon-youtube.svg" alt="youtube" />
         </a>
         <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-          <img src="/assets/img/svg/icon-instagram.svg" alt="instagram">
+          <img src="/assets/img/svg/icon-instagram.svg" alt="instagram" />
         </a>
       </div>
     </div>
