--- a/signup.html
+++ b/signup.html
@@ -14,14 +14,16 @@
 <body class="sign-header-wrap">
   <div class="sign-header-inner">
     <div class="sign-header-logo">
-      <a href="/"><img src="/assets/img/svg/sign-logo.svg" class="header-logo__image" alt="사이트 로고 Linkbrary"></a>
+      <a href="/">
+        <img  class="header-logo__image" src="/assets/img/svg/sign-logo.svg" alt="사이트 로고 Linkbrary" />
+      </a>
       <div class="header-logo__line">
         <p class="header-logo__text">이미 회원이신가요?</p>
         <a href="/signin.html" class="header-logo__link">로그인 하기</a>
       </div>
     </div>
 
-    <form><!-- 종결 하기 <img /> -->
+    <form>
       <div class="sign-wrap">
         <div class="sign-inner">
           <label for="email" class="sign-label">이메일</label>
@@ -29,18 +31,18 @@
         </div>
         <div class="sign-inner">
           <label for="password" class="sign-label">비밀번호</label>
-          <div class="sign__pw-eye">
+          <div class="sign-pw">
             <input type="password" class="sign-input" name="pw" />
-            <button class="sign__pw-eye-off"> 
+            <button class="sign-pw__eye-btn"> 
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
         </div>
         <div class="sign-inner">
           <label for="password" class="sign-label">비밀번호 확인</label>
-          <div class="sign__pw-eye">
+          <div class="sign-pw">
             <input type="password" class="sign-input" name="pw" />
-            <button class="sign__pw-eye-off">  
+            <button class="sign-pw__eye-btn">  
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
@@ -55,12 +57,12 @@
     <div class="social-sign__inner">
       <a href="https://www.google.com/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img" alt="google로 로그인하기">
+          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img" alt="google로 로그인하기" />
         </div>
       </a>
       <a href="https://www.kakaocorp.com/page/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img" alt="kakao로 로그인하기">
+          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img" alt="kakao로 로그인하기" />
         </div>
       </a>
     </div>
