로그인, 회원가입 페이지 눈 모양 아이콘 클릭시 비밀번호의 문자열이 보이기도 하고, 가려지기도 함

--- a/signin.html
+++ b/signin.html
@@ -30,7 +30,9 @@
           <label for="password" class="auth-form__label">비밀번호</label>
           <div class="auth-form__pw-wp">
             <input id="password" class="auth-form__input" type="password" />
-            <img class="auth-form__eye" src="/assets/img/eye_off.png" alt="eye off" />
+            <button type="button" id="passwordEyeButton" class="auth-form__eye-button">
+              <img class="auth-form__eye eye--off" src="/assets/img/eye_off.png" alt="eye off" />
+            </button>
           </div>
         </div>
         <button type="submit" class="btn auth-form__btn">로그인</button>
