Feat signin page JS

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           저장하세요
         </h2>
         <h6 class="description">
-          나중에 읽고 싶은 글, 다시보고 싶은 영성,<br class="br_tag" />
+          나중에 읽고 싶은 글, 다시보고 싶은 영상,<br class="br_tag" />
           사고 싶은 옷, 기억하고 싶은 모든 것을<br class="br_tag" />
           한 공간에 저장하세요.
         </h6>
