--- a/signin.html
+++ b/signin.html
@@ -23,12 +23,15 @@
           <div class="sign-input-box">
             <label for="email" class="email">이메일</label>
             <input id="email" name="email" />
+            <div class="error-email"></div>
           </div>
           <div class="sign-input-box box-password">
             <label for="password" class="password">비밀번호</label>
             <input class="password-input" name="password" type="password" />
+            <div class="error-password"></div>
             <button class="eye-button" type="button">
-              <img src="./img/eye-off.svg" />
+              <img src="./img/eye-off.svg" class="eye-off" />
+              <img src="./img/eye-on.svg" class="eye-on hidden-eye-btn" />
             </button>
           </div>
         </div>
@@ -46,5 +49,6 @@
         </div>
       </div>
     </div>
+    <script src="./js/signin.js"></script>
   </body>
 </html>
