--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
           <label for="passwordConfirm" class="auth-form__label">비밀번호 확인</label>
           <div class="auth-form__pw-wp">
             <input for="passwordConfirm" class="auth-form__input" type="password" />
-            <button type="button" id="passwordEyeButton" class="auth-form__eye-button">
+            <button type="button" id="passwordConfirmEyeButton" class="auth-form__eye-button">
               <img class="auth-form__eye eye--off" src="/assets/img/eye_off.png" alt="eye off" />
             </button>
           </div>
