--- a/signup.html
+++ b/signup.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <title>회원가입</title>
+    <meta
+      name="viewport"
+      content="width=device-width,minimum-scale=1,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
     <link rel="stylesheet" href="./src/sign.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
