--- a/signin.html
+++ b/signin.html
@@ -9,6 +9,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
     <link rel="stylesheet" href="./src/sign.css" />
+    
   </head>
   <body>
     <header>
@@ -20,18 +21,29 @@
       </p>
     </header>
     <div class="sign-box">
-      <form class="sign-form">
+      <form class="sign-form" onsubmit="login(event);">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input" />
+            <input class="sign-input input-email" />
+            <p class="error error-email"></p>
+            <!-- <div class="error-box">
+              <p class="error email-empty">이메일을 입력해주세요.</p>
+              <p class="error email-check">올바른 이메일 주소가 아닙니다.</p>
+              <p class="error email-fail">이메일을 확인해 주세요.</p>
+            </div>        -->
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input" type="password" />
+            <input class="sign-input input-pw" type="password" />
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
+            <p class="error error-pw"></p>
+            <!-- <div class="error-box">
+              <p class="error pw-empty">비밀번호를 입력해주세요.</p>
+              <p class="error fail">비밀번호를 확인해 주세요.</p>
+            </div>    -->
           </div>
         </div>
         <button class="cta" type="submit">로그인</button>
@@ -48,6 +60,7 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="./src/signin.js"></script>
   </body>
 </html>
 
