Feat : Enter키로 로그인하기 및 비밀번호 보기 토글 기능 생성

--- a/signin.html
+++ b/signin.html
@@ -20,8 +20,8 @@
                 </label>
                 <label class="label passwordTag">
                     <p>비밀번호</p>
-                    <input class='password' type="text" name="password" placeholder="비밀번호 입력">
-                    <img src="/static/img/eyes.svg" alt="비밀번호 보기" class="eyes">
+                    <input class='password' type="password" name="password" placeholder="비밀번호 입력">
+                    <img src="/static/img/noeyes.svg" alt="비밀번호 보기" class="eyes">
                 </label>
             </div>
             <button class="loginBtn">로그인</button>
