--- a/signin.html
+++ b/signin.html
@@ -28,19 +28,19 @@
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input id ="input-email" class="sign-input" />
-            <p id="email-error-massage"></p>
+            <input id ="emailInput" class="sign-input" />
+            <p id="email-error" class="error-message"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
             <input id="input-pw" class="sign-input" type="password" />
-            <p id="pw-error-massage"></p>
+            <p id="pw-error-massage" class="error-message"></p>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
           </div>
         </div>
-        <button class="cta" type="submit" onclick="attemptLogin()">로그인</button>
+        <button class="cta" type="submit" onclick="attemptLogin">로그인</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">소셜 로그인</span>
@@ -54,6 +54,6 @@
         </div>
       </div>
     </div>
-    <script src="./src/script.js"></script>
+    <script src="./src/login.js"></script>
   </body>
 </html>
