--- a/folder.html
+++ b/folder.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy</title>
+  <title>Folder</title>
 </head>
 <body>
-  
+  폴더 페이지
 </body>
 </html>
