--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./images/bird.jpg">
-    <meta property="og:title" content="Linkbrary">
-    <meta 
+    <meta name="title" property="og:title" content="Linkbrary">
+    <meta
+      name="description" 
       property="og:description"
       content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요"
     >
@@ -18,11 +19,11 @@
   <body>
     <nav>
       <div class="navbar">
-        <a href="codeit.html">
+        <a href="index.html">
           <img class="logo-image" src="./images/logo.svg" alt="Linkbrary 로고">
         </a>
         <a class="login-button" href="signin.html">
-          <span>로그인</span>
+          로그인
         </a>
       </div>
     </nav>
@@ -31,7 +32,7 @@
         <h1 class="slogan">
           <span class="slogan-text">세상의 모든 정보</span><span>를<br>쉽게 저장하고 관리해 보세요</span>
         </h1>  
-        <a class="CTA" href="signup.html">
+        <a class="cta" href="signup.html">
           <span>링크 추가하기</span>
         </a>
         <img class="header-section-img" src="./images/header-section-img.png" alt="Linkbrary 예시 이미지">
@@ -57,7 +58,7 @@
             <span class="section-color-title-2">관리</span><span>하세요</span>
           </h2>
           <p class="description">
-            나만의 폴더를무제한으로 만들고<br> 다양하게 활용할 수 있습니다.
+            나만의 폴더를 무제한으로 만들고<br>다양하게 활용할 수 있습니다.
           </p>
         </div>
       </div>
@@ -78,7 +79,7 @@
         <div class="section-container">
           <h2 class="section-title">
             <span>저장한 링크를</span><br>
-            <span class="section-color-title4">검색</span><span>해 보세요</span>
+            <span class="section-color-title-4">검색</span><span>해 보세요</span>
           </h2>
           <p class="description">
             중요한 정보들을 검색으로 쉽게 찾아보세요.
