--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   <body>
     <header>
       <a class="logo-link" href="index.html">
-        <img class="header-logo" src="./images/logo.svg">
+        <img class="header-logo" src="./images/logo.svg" alt="홈으로 돌아가는 로고 이미지">
       </a>
       <div class="signup-check-box">
         <span class="signup-check-text">이미 회원이신가요?</span>
@@ -19,46 +19,44 @@
       </div>
     </header>
     <div class="signup-box">
-      <form class="signup-container">
-        <div class="signup-input-boxs">
-          <div class="signup-input-box">
-            <label class="signup-label">이메일</label>
-            <input class="signup-input" type="email">
-          </div>
-          <div class="signup-input-box">
-            <label class="signup-label">비밀번호</label>
-            <div class="signup-password">
-              <input class="signup-input" type="password">
-              <button class="password-button" type="button">
-                <img src="./images/eye-on.svg">
-              </button>
-            </div>
-          </div>
-          <div class="signup-input-password">
-            <label class="signup-label">비밀번호 확인</label>
-            <div class="signup-password">
-              <input class="signup-input" type="password">
-              <button class="password-button" type="button">
-                <img src="./images/eye-on.svg">
-              </button>
-            </div>
+      <div class="signup-input-boxs">
+        <div class="signup-input-box">
+          <label for="signup-email">이메일</label>
+          <input id="signup-email" name="signup-email" type="email">
+        </div>
+        <div class="signup-input-box">
+          <label for="signup-password">비밀번호</label>
+          <div class="signup-input-password-box">
+            <input id="signup-password" name="signup-password" type="password">
+            <button class="password-button" type="button">
+              <img src="./images/eye-on.svg" alt="패스워드 눈 모양 이미지">
+            </button>
           </div>
         </div>
-        <button class="CTA">회원가입</button>
-      </form>
+        <div class="signup-input-password">
+          <label for="signup-password-check">비밀번호 확인</label>
+          <div class="signup-input-password-box">
+            <input id="signup-password-check" name="signup-password-check" type="password">
+            <button class="password-button" type="button">
+              <img src="./images/eye-on.svg" alt="패스워드 눈 모양 이미지">
+            </button>
+          </div>
+        </div>
+        <button class="cta">회원가입</button>
+      </div>
       <div class="other-signup">
         <span class="other-signup-text">다른 방식으로 가입하기</span>
         <div class="icon">
-          <div class="google">
+          <div class="icon-box">
             <a href="https://www.google.com/" target="_blank">
               <img src="./images/signin-googleback.svg">
-              <img class="in-google" src="./images/signin-google.png">
+              <img class="box-in-icon" src="./images/signin-google.png">
             </a>
           </div>
-          <div class="kakao">
+          <div class="icon-box">
             <a href="https://www.kakaocorp.com/page/" target="_blank">
               <img src="./images/signin-kakaoback.svg">
-              <img class="in-kakao" src="./images/signin-kakao.svg">
+              <img class="box-in-icon" src="./images/signin-kakao.svg">
             </a>
           </div>
         </div>
