비밀번호 input 에러 메시지 기능 등록

--- a/signin.html
+++ b/signin.html
@@ -33,8 +33,8 @@
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input id="input-pw" class="sign-input" type="password" />
-            <p id="pw-error-massage" class="error-message"></p>
+            <input id="pwInput" class="sign-input" type="password" />
+            <p id="pw-error" class="error-message"></p>
             <button class="eye-button" type="button">
               <img src="./images/eye-off.svg" />
             </button>
