--- a/signin.html
+++ b/signin.html
@@ -40,7 +40,7 @@
             </button>
           </div>
         </div>
-        <button class="cta" type="submit" onclick="attemptLogin">로그인</button>
+        <button class="cta" type="submit" onclick="attemptLogin()">로그인</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">소셜 로그인</span>
